Changes
=======

1.0.26 (TBD)
------------

- When a MemoryFile is opened in write mode, a TypeError will be raised if
  integer width and height are not given, fixing #1748.

1.0.25 (2019-08-06)
-------------------

- In `features.rasterize()`, a shape with an associated value of `None` is now
  burned in using the function's `fill` value and no longer triggers a
  `TypeError` (#1738).
- Instances of pytest's tmp_path fixture in tests/test_dataset.py have been
  replaced by instances of the older style tmpdir fixture (#1697).
- Add support for using GDAL 3.x and PROJ 6 libraries (#1700, #1729). Please
  note that new features of GDAL 3 and PROJ 6 are not intended to surface.
  Geometries and coordinates returned from rasterio keep to the traditional GIS
  axis order used by GDAL versions < 3. To do this, rasterio applies a new
  private extension function named osr_set_traditional_axis_mapping_strategy to
  every OGRSpatialReferenceH object that will be returned from methods in the
  _CRS module. Please also note that the binary wheels uploaded to PyPI for
  1.0.25 will include GDAL 2.4, *not* GDAL 3.0.
- We were using pytest incorrectly and pytest 5 caught us doing it. This is
  now fixed in commit b9f34ee.
- A bug preventing creation of Env instances, and thus dataset opening, when
  AWS credentials exist in the environment but boto3 is unavailable has been
  fixed (#1708).

1.0.24 (2019-06-05)
-------------------

- By default GDAL reuses existing dataset connections when possible.
  Multi-threaded programs must avoid this as must programs that re-open
  datasets in a different context, such as the overview-seeking program shown
  in issue #1504. The sharing keyword argument of rasterio.open() was supposed
  to allow users to disable connection reuse on a case-by-case basis, but the
  implementation was faulty and connection reuse persisted (#1701). This has
  been fixed in PR #1704.

1.0.23 (2019-05-15)
-------------------
